--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,3 +4,35 @@
 @import "variables";
 @import "mixins";
 @import "base";
+
+.top-bar {
+  background-color: transparent;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  height: 63px;
+  padding-top: 15px;
+  letter-spacing: 3px;
+  font-family: 'Lato', Helvetica;
+  font-weight: 500;
+
+  .top-bar-section {
+    ul {
+      li {
+        a {
+          background-color: transparent;
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
+}
+
+.jumbotron {
+  overflow: hidden;
+  height: 100vh;
+
+  video {
+    width: 100%;
+  }
+}
