--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,5 @@
-@import url('http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css');
+
+@import url('http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
 
 .column {
   padding: 0;
