--- a/public/partials/list.html
+++ b/public/partials/list.html
@@ -1,11 +1,12 @@
 <div>
   <h1>IMDB Movie Directory</h1>
-  <input>
+  <input ng-model="query">
 
   <div>
-    <div ng-repeat="movie in movies">
-      <p>{{movie}}</p>
-      <h2>{{movie.title}}</h2>
+    <div ng-hide="!query" ng-repeat="movie in movies | filter:query">
+      <a href="#/details/{{movie.id}}"><h2>{{movie.title}}</h2></a>
+      <p>Rank: {{movie.rank}}</p>
+      <img src="./data/images/{{movie.id}}.jpg" />
     </div>
   </div>
 </div>
