--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -41,11 +41,59 @@
   }
 }
 
+#modal {
+
+  width: 100%;
+  height: 100vh;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  z-index: 100;
+  display: none;
+
+  .content {
+    width: 500px;
+    height: 500px;
+    margin: 0 auto;
+    padding-top: 10px;
+    background-color: white;
+    margin-top: calc(50vh - 250px);
+
+    a {
+      float: right;
+      margin: 5px;
+      margin-top: -5px;
+      color: #777;
+      font-family: sans-serif;
+      cursor: pointer;
+    }
+
+    p {
+      margin-left: 5px;
+      margin-top: -5px;
+      float: left;
+    }
+
+    .image {
+      width: 480px;
+      height: 480px;
+      background-size: cover;
+      background-position: center;
+      margin: 10px;
+      top: 10px;
+    }
+  }
+}
+
 .top-bar.nav-small {
   background-color: #1E1741;
   padding-top: 0px;
   height: 50px;
   transition: all 0.2s ease-in;
+
+  object {
+    margin-top: 3px;
+  }
 }
 
 .jumbotron {
@@ -55,16 +103,59 @@
   video {
     min-width: 100%;
   }
+
+  .jumbo-overlay-wrapper {
+    color: white;
+    height: 300px;
+    width: 100%;
+    top: calc(50vh - 132.5px);
+    margin: 0 auto;
+    vertical-align: middle;
+    position: absolute;
+    display: inline-block;
+    z-index: 2;
+
+    .jumbo-overlay {
+      text-align: center;
+      width: 400px;
+      height: 265px;
+      margin: 0 auto;
+
+      h1 {
+        text-transform: uppercase;
+        line-height: 0.75em;
+        letter-spacing: 5px;
+        font-family: 'Lato', Helvetica;
+        color: white;
+        font-size: 2em;
+      }
+
+      h3 {
+        margin-top: 20px;
+        font-size: 1.5em;
+        color: #777;
+        font-style: italic;
+        font-family: 'Lato';
+      }
+    }
+  }
 }
 
 .seasons {
   padding: 0;
+  background-color: black;
   height: calc(50vh - 25px);
 
   .background {
+    opacity: 0.6;
+    background-size: cover;
+    background-position: center;
     width: 100%;
     height: 100%;
-    background-size: cover;
+  }
+
+  .background:hover {
+    opacity: 1;
   }
 
   .foreground {
@@ -252,6 +343,96 @@ footer {
 
       h4 {
         color: white;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 60em) {
+
+  nav {
+    .name {
+      object {
+        margin-top: 5px;
+        width: 250px;
+      }
+    }
+  }
+
+  .top-bar {
+    .top-bar-section {
+      ul {
+        li {
+          width: 120px;
+
+          a {
+            font-size: 0.8em;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 40em) {
+
+  .top-bar.nav-small object {
+    margin-top: 6px;
+  }
+
+  #characters {
+    .character {
+      img {
+        margin-top: 50vh;
+        margin-left: 19%;
+        height: 50vh;
+        width: initial;
+      }
+
+      .info {
+        position: absolute;
+        width: 100vw;
+        padding: 100px;
+        padding-top: 30px;
+        margin: 0;
+      }
+    }
+  }
+
+  footer {
+
+    h2 {
+      font-size: 2.5em;
+    }
+
+    .social-row {
+      height: 100px;
+
+      .icon-row {
+        top: -50px;
+
+        .icon-center {
+          width: 330px;
+
+          .icon-wrapper {
+            width: 75px;
+            height: 75px;
+            border-radius: 50px;
+
+            i {
+              font-size: 2.5em;
+            }
+          }
+        }
+      }
+
+      .yahoo-row {
+        width: 320px;
+        font-size: 0.9em;
+
+        img {
+          height: 40px;
+        }
       }
     }
   }
