--- a/public/css/imdbstyles.css
+++ b/public/css/imdbstyles.css
@@ -6,3 +6,11 @@
 img {
   height: 150px;
 }
+
+.movie-item {
+  transition: all 0.2s ease-in;
+}
+
+.movie-item:hover {
+  transform: scale(1.2);
+}
