--- a/public/partials/details.html
+++ b/public/partials/details.html
@@ -1,2 +1,7 @@
 <h1>{{movie.title}}</h1>
-{{movie}}
+<p>Rank: {{movie.rank}}</p>
+<p>Genre: {{movie.genre}}</p>
+<p>{{movie.plot}}</p>
+
+<a class="button" href="#/details/{{movie.rank - 2}}">Prev</a>
+<a class="button" href="#/details/{{movie.rank}}">Next</a>
